[project]
name = "helloworld-langraph"
version = "0.1.0"
description = "basic langgraph structure"
authors = [
    {name = "tsamanta"}
]
readme = "README.md"
requires-python = "3.12.4"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langgraph (>=0.5.1,<0.6.0)",
    "ipython (>=9.4.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
